# gba-game-of-life

./: Cargo.toml  README.md  build.rs  linker.ld  thumbv4-none-agb.json
.cargo/: config.toml
src/: lib.rs  main.rs
