[package]
name = "gba-game-of-life"
version = "0.1.0"
authors = ["Michael Mogenson <michael.mogenson@gmail.com>"]
edition = "2018"

[dependencies]
gba = { git = "https://github.com/rust-console/gba" }
panic-abort = "0.3.2"
rand = { version = "0.8.0", default-features = false, features = ["small_rng"] }
voladdress = "0.3.0"
